# cloud-autopkg-runner

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: code_quality.yml  dev_release.yml  publish_pypi.yml  publish_testpypi.yml  release.yml
AutoPkg/Overrides/: Doctave.munki.recipe  recipe_list.json  repo_list.txt
src/cloud_autopkg_runner/: __about__.py  __init__.py  __main__.py  autopkg_prefs.py  exceptions.py  metadata_cache.py  recipe.py  recipe_report.py  shell.py
