[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
]

[project]
name = "cloud-autopkg-runner"
version = "0.1.0"
description = "Asynchronous tools for managing AutoPkg recipes in cloud environments."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Scott Blake", email = "mitchelsblake@gmail.com"}]
keywords = ["autopkg", "cloud", "automation", "recipes", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyyaml>=6.0.2",
    "xattr>=1.1.4",
]

[project.scripts]
autopkg-run = "cloud_autopkg_runner.__main__:main"


[tool.coverage.report]
fail_under = 80

[tool.coverage.xml]
output = "artifacts/coverage.xml"

[tool.coverage.run]
branch = true
data_file = "artifacts/.coverage"
source = ["src"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
cache_dir = ".cache/pytest"
addopts = [
    "--color=yes",
    "--cov",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--junit-xml=artifacts/test_results.xml",
    "--verbosity=1",
]

[tool.ruff]
cache-dir = ".cache/ruff"
include = ["pyproject.toml", "{src,tests}/**/*.py"]
extend-exclude = [".venv"]
select = ["D", "E4", "E7", "E9", "F", "W"]

[tool.ruff.lint.pydocstyle]
convention = "google"
